# Strategy-Arena

./: .env.example  .gitignore  README.md  arena_runner_v3.py  cleanup_database.py  config.py  graph.dot  oil_news.csv  pyproject.toml  run_arena.sh  run_arena_general.sh  run_arena_oil.sh  run_arena_quick.sh  run_oil_arena.sh  schwab_val.md  scraped_watchlists.json  test_oil_data.py  test_priority_improvements.py  test_risk_management.py  validate_schwab.py  watchlist_scraper.py
analysis/: analysis.txt  audit_dilution.csv  audit_regime.csv  audit_slippage.csv  forward_analysis.py  impact_collector.py  macro_audit.py  master_analysis.py  sentiment_analysis.py  tanker_tracking.py
backtest/: enhanced_dilution_detection.py  impact_measurement.py  intraday_features.py  multi_timeframe.py  position_sizing.py  rebalancing.py  risk_management.py  stops.py
data/: __init__.py  fetcher.py  gp_strategies.db  intraday_fetcher.py  universe.py
evolution/: __init__.py  diversity.py  feature_cache.py  features.py  fitness_calmar.py  formula_parser.py  gp.py  gp_fitness.py  gp_storage.py  multi_objective.py  nodes.py  oil_specific_features.py  population.py  progress.py  regime_detection.py  smart_money_features.py  strategy.py  support_resistance_features.py  test.py  tree_ops.py  walkforward.py
plans/: DESIGN_DOC_backtesting_platform_v4.md  EXISTING_FEATURES_AUDIT.md  SIMULATION_FIXES_PLAN.md  autonomous_trading_roadmap.md  card_simulator_accuracy_audit.md  engineering_assessment.md  schwab_data_migration.md
scripts/: README.md  benchmark_performance.sh  benchmark_quick.sh  (+6 more)
(+98 files in other folders)
